<resources>
    <string name="app_name">Sandwich Gourmet</string>
    <string name="pedidos">Pedidos</string>
    <string name="menu">Menú</string>
    <string name="categoria">Categoría</string>
    <string name="distancias">Distancias</string>
    <string name="contrasenas">Contraseñas</string>
    <string name="error">Se ha producido un error</string>
    <string name="ubicacion_incorrecta">La ubicación escogida no es correcta.</string>
    <string name="administracion">Administración</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="licencia">Licencia</string>
    <string name="contacto">Contacto</string>
    <string name="_5355759386">+5355759386</string>
    <string name="ronnynordelo_gmail_com">ronnynordelo@gmail.com</string>
    <string name="creadores_principales">Creadores Principales:</string>
    <string name="_5358111071">+5358111071</string>
    <string name="_5356285623">+5356285623</string>
    <string name="ronny_nordelo_pe_a">Ronny Nordelo Peña</string>
    <string name="contrasena">Contraseñas</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="mi_contrase_a">Mi contraseña</string>
    <string name="confirmar_contrase_a_nueva">Confirmar contraseña nueva</string>
    <string name="contrase_a_de_empleados">Contraseña de empleados</string>
    <string name="cambiar">Cambiar</string>
    <string name="cargando_datos">Cargando datos</string>
    <string name="revise_conx">Revise su conexión a Internet e intente de nuevo</string>
    <string name="aceptar">Aceptar</string>
    <string name="campo_vacio">Este campo no puede estar vacío</string>
    <string name="contrasena_actual_incorrecta">La contraseña actual es incorrecta</string>
    <string name="contrNueva_noCoincide_contrConf">La contraseña nueva y su confirmación no son iguales</string>
    <string name="contrActual_noDebe_coincidir_contrNueva">La contraseña actual no debe coincidir con la nueva</string>
    <string name="contr_noDebeCoinc_contrEmpleados">La contraseña no debe coincidir con la de los empleados</string>
    <string name="contr_noDebeCoinc_contrJefe">La contraseña no debe coincidir con la de jefe</string>
    <string name="cambio_satisfactorio">Cambio satisfactorio</string>
    <string name="contrCambiada_satisfactoriamente">La contraseña ha sido cambiada satisfactoriamente</string>
    <string name="guardando_contrasena">Guardando contraseña</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="km">Km</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="precio">Precio</string>
    <string name="cup">CUP</string>
    <string name="sandwich">Sandwich</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="Administracion">Administración</string>
    <string name="modo_administrador">Modo administrador</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="productos">productos</string>
    <string name="eliminar_distancia_titulo">Eliminar distancia</string>
    <string name="eliminar_distancia_confirmacion">¿Realmente desea eliminar esta distancia?</string>
    <string name="por_favor_espere">Por favor espere…</string>
    <string name="actualizando_info">Actualizando información</string>
    <string name="km_comprendidos_otras_distancias">Hay kilómetros que coinciden con otros ya guardados</string>
    <string name="desde_menor_que_hasta">La distancia del campo \'Desde\' debe ser menor que la del campo \'Hasta\'</string>
    <string name="seleccione_distancia">Seleccione distancia</string>
    <string name="carrito">Carrito</string>
    <string name="escoger_ubicacion">Escoger ubicación</string>
    <string name="hora_a_entregar">Hora a entregar</string>
    <string name="especificar_direccion">Especificar dirección:</string>
    <string name="vaciar_carrito">Vaciar Carrito</string>
    <string name="espere_la_confirmacion_de_su_pedido">  Ahora solo resta que su pedido sea aceptado. Puede ver esto en la pantalla \"Mis Pedidos\"</string>
    <string name="pedido_enviado_correctamente">¡Pedido enviado correctamente!</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="hora_de_entrega">Hora de entrega:</string>
    <string name="cancelado_por">Cancelado por:</string>
    <string name="personalizar_categorias">Personalizar Categorias</string>
    <string name="envie_una_respuesta_al_cliente_sobre_la_cancelacion_de_su_pedido">Envie una respuesta al cliente sobre la cancelación de su pedido:</string>
    <string name="el_pedido_fue_cancelado">El pedido fue cancelado:</string>
    <string name="agregar">Agregar</string>
    <string name="cargando_mapa">Cargando mapa</string>
    <string name="realmente_desea_eliminar_elemento_carrito">¿Realmente desea eliminar este elemento del carrito?</string>
    <string name="error_obtener_ubic">No se pudo obtener la ubicacion</string>
    <string name="obtenida">Obtenida</string>
    <string name="cancelar">Cancelar</string>
    <string name="debe_espec_direccion">Debe especificar su dirección</string>
    <string name="carrito_vacio">No hay elementos en el carrito</string>
    <string name="no_seleccionada">no seleccionada</string>
    <string name="no_se_puod_enviar_pedido">No se pudo enviar el pedido</string>
    <string name="debe_colocar_direccion">Debe colocar una direccion para la exactitud de la entrega</string>
    <string name="debe_selecc_ubic">Debe seleccionar su ubicación en el mapa para determinar a la distancia a la que se encuentra</string>
    <string name="debe_especificar_hora">Debe especificar para qué hora desea su pedido</string>
    <string name="enviando_pedido">Enviando pedido</string>
    <string name="direccion">Dirección:</string>
    <string name="precio_dos_puntos">Precio:</string>
    <string name="ver_en_el_mapa">Ver en el mapa</string>
    <string name="en_espera">En espera</string>
    <string name="finalizado">Finalizado</string>
    <string name="hora">Hora:</string>
    <string name="aceptado">Aceptado</string>
    <string name="realizando_operacion">Realizando operación</string>
    <string name="cancelado">Cancelado</string>
    <string name="no_posible_operacion_ya_aceptado">No es posible realizar la operación. Ya ha sido aceptado el pedido</string>
    <string name="no_posible_operacion_ya_cancelado">No es posible realizar la operación. Ya ha sido cancelado el pedido</string>
    <string name="todos">Todos</string>
    <string name="cancelados">Cancelados</string>
    <string name="aceptados">Aceptados</string>
    <string name="pedido_cancelado_por">Pedido cancelado por:</string>
    <string name="vaciar">Vaciar</string>
    <string name="aun_no_hay_productos_en_su_pedido">¡Aún no hay productos en su pedido!</string>
    <string name="aun_no_hay_pedidos">¡Aún no hay pedido!</string>
    <string name="vaciar_pedidos">Vaciar pedidos</string>
    <string name="seguro_vaciar_pedidos">¿Realmente desea vaciar los pedidos?</string>
    <string name="salir">Salir</string>
    <string name="seguro_desea_salir">¿Realmente desea salir?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="nombre_de_la_categor_a">Nombre de la categoría</string>
    <string name="error_obtener_imagen">Error al obtener imagen</string>
    <string name="demasiadas_categorias">Demasiadas categorías</string>
    <string name="excedido_maximo_categorias">Ha excedido el número máximo de categorías</string>
    <string name="existe_categoria_con_este_nombre">Ya existe una categoría con este nombre</string>
    <string name="eliminar_categoria">Eliminar categoría</string>
    <string name="seguro_eliminar_categoria">¿Realmente desea eliminar esta caregoría?</string>
    <string name="personalizar_menu">Personalizar menú</string>
    <string name="a_n_no_hay_productos_en_esta_secci_n">Aún no hay productos en esta sección</string>
    <string name="categoria_dos_puntos">Categoría:</string>
    <string name="demasiados_elementos">Demasiados elementos</string>
    <string name="excedido_numero_maximo_elementos">Ha excedido el número máximo de elementos permitidos en el menú</string>
    <string name="producto_dos_puntos">Producto:</string>
    <string name="eliminar_elemento">Eliminar elemento</string>
    <string name="esta_seguro_eliminar_menu">¿Realmente desea eliminar este elemento del menú?</string>
    <string name="solo_colocar_5_sandwiches">Para el correcto funcionamiento de la aplicación solo puede colocar hasta 5 tipos de sandwiches diferentes en el carrito</string>
    <string name="solo_colocar_30_elementos">Para el correcto funcionamiento de la aplicación solo puede colocar hasta 30 tipos de productos diferentes en el carrito</string>
    <string name="demasiados_sandwiches_diferentes">Demasiados tipos de sandwich diferentes</string>
    <string name="demasiados_elementos_diferentes">Demasiados tipos de productos diferentes</string>
    <string name="categorias_toolbar">Categorías</string>
    <string name="rev_conx">Revise su conexión e intente de nuevo</string>
    <string name="close">close</string>
    <string name="añadir_al_carrito">Añadir al carrito:</string>
    <string name="panes">Panes:</string>
    <string name="confeccione_su_sandwich">Confeccione su Sandwich</string>
    <string name="quesos">Quesos:</string>
    <string name="embutidos_y_pescados">Embutidos y atún:</string>
    <string name="salsas">Salsas:</string>
    <string name="vegetales">Vegetales</string>
    <string name="modo_vegetariano">Modo vegetariano</string>
    <string name="especificaciones">Especificaciones:</string>
    <string name="escriba_sus_especificaciones_aqui">Escriba sus especificaciones aquí</string>
    <string name="Salir">Salir</string>
    <string name="selecc_ctdad_deseada">Seleccione la cantidad deseada</string>
    <string name="precio_0_cup">Precio: 0 CUP</string>
    <string name="espere">Espere por favor…</string>
    <string name="expl_modo_vegetariano">Active esta opción si no desea agregar embutido, atún ni queso</string>
    <string name="sandwich_no_admitido">Sandwich no admitido</string>
    <string name="debe_seleccionar_pan">Debe seleccionar un tipo de pan</string>
    <string name="debe_selecc_embutido">Debe seleccionar al menos un tipo de embutido, atún o un tipo de queso. De lo contrario active el modo vegetariano</string>
    <string name="confirmar">Confirmar</string>
    <string name="cant_de_productos">Cantidad de productos</string>
    <string name="ir_a_mis_pedidos">Ir a mis pedidos</string>
    <string name="producto_a_carrito_con_exito">Producto agregado a carrito con éxito</string>
    <string name="seguir_agregando_o_dirijirse_a_este">¿Desea continuar agregando elementos a su carrito o dirigirse e este?</string>
    <string name="continuar">Continuar</string>
    <string name="ir_a_carrito">Ir a carrito</string>
    <string name="desea_vaciar_carrito">Realmente desea vaciar el carrito</string>
    <string name="introduzca_su_contrase_a">Introduzca su contraseña:</string>
    <string name="contrasena_no_coincidente">Su contraseña no coincide con ninguna existente</string>
    <string name="forma_de_pago">Forma de pago:</string>
    <string name="lo_m_s_pronto_posible">Lo más pronto posible</string>
    <string name="tiempo_demora_pedido">Una vez el pedido sea aceptado, este tardará aproximadamente 15 min en prepararse más el tiempo que demore el envío(depende se su ubicación)</string>
    <string name="seleccione_minimo_hora_despues">Debe seleccionar mínimo una hora después de la hora actual, de lo contrario active la opción \"Lo más pronto posible\"</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="n_mero_de_whatsapp">Número de WhatsApp</string>
</resources>