<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/li_escoger_hora_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/lo_m_s_pronto_posible"
            android:textSize="16sp" />

        <TimePicker
            android:id="@+id/li_escoger_hora_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/li_escoger_hora_tv_hora_despues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/seleccione_minimo_hora_despues"
            android:textSize="16sp"
            android:textColor="@color/rojo_logo"
            android:autoSizeMaxTextSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/li_escoger_hora_tv_tiempo_demora_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/tiempo_demora_pedido"
            android:textSize="16sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/li_escoger_hora_tv_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20sp"
                android:background="@drawable/textview_redondeado_amarillo_ship"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:text="@string/aceptar"
                android:textColor="@color/amarillo_logo"
                android:textSize="18sp"
                android:layout_marginBottom="10sp"/>

            <TextView
                android:id="@+id/li_escoger_hora_tv_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:background="@drawable/textview_redondeado_amarillo_ship"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/cancelar"
                android:textColor="@color/amarillo_logo"
                android:textSize="18sp"
                android:layout_marginBottom="10sp"/>

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>