<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/recycler_pedidos_cardview_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:elevation="5sp"
        android:translationZ="5sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">
        <LinearLayout
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Fase 1-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Hora del pedido-->
                <LinearLayout
                    android:id="@+id/recycler_pedidos_ll_hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hora"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_marginStart="5sp"
                        android:id="@+id/recycler_pedidos_hora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:10 pm"
                        android:textSize="18sp" />

                </LinearLayout>

                <!--Respuesta del pedido-->
                <TextView
                    android:id="@+id/recycler_pedidos_TVestado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/textview_redondeado_azul_chip"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:text="@string/en_espera"
                    android:textColor="@color/azul"
                    android:textSize="18sp" />

                <!--Precio-->
                <LinearLayout
                    android:layout_below="@+id/recycler_pedidos_ll_hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_dos_puntos"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_marginStart="5sp"
                        android:id="@+id/recycler_pedidos_precio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10 CUP"
                        android:textSize="18sp" />


                </LinearLayout>

            </RelativeLayout>

            <!--###Separador###-->
            <View
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:layout_width="match_parent"
                android:layout_height="0.3sp"
                android:background="@color/black"/>

            <!--Fase 2-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Forma de pago-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forma_de_pago"/>

                    <TextView
                        android:id="@+id/recycler_pedidos_TVformaPago"
                        android:layout_marginStart="5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Efectivo"/>

                </LinearLayout>

                <!--Numero cel-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_mero_de_tel_fono"/>

                    <TextView
                        android:id="@+id/recycler_pedidos_TVnumCel"
                        android:layout_marginStart="5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Efectivo"/>

                </LinearLayout>

                <!--Numero de wapp-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_mero_de_whatsapp"/>

                    <TextView
                        android:id="@+id/recycler_pedidos_TVnumWapp"
                        android:layout_marginStart="5sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Efectivo"/>

                </LinearLayout>


            </LinearLayout>

            <!--###Separador###-->
            <View
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:layout_width="match_parent"
                android:layout_height="0.3sp"
                android:background="@color/black"/>
            
            <!--Fase 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/recycler_pedidos_TVelementos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Producto --- 0.0 CUP\nProducto --- 0.0 CUP\nProductoS\n--------subproducto -- 0.0 CUp"/>



            </LinearLayout>

            <!--###Separador###-->
            <View
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:layout_width="match_parent"
                android:layout_height="0.3sp"
                android:background="@color/black"/>

            <!--Fase 4-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Direccion Title-->
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion"
                    android:textSize="18sp"/>

                <!--Direccion introducida por el usuario-->
                <TextView
                    android:id="@+id/recycler_pedidos_TVdireccion"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Direccion de ejemplo. Aqui el usuario introduce su direccion "
                    />

                <!--Ver en el mapa-->
                <LinearLayout
                    android:id="@+id/recycler_pedidos_ver_en_mapa"
                    android:layout_marginTop="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_redondeado_blanco"
                    android:backgroundTint="@color/amarillo_logo"
                    android:padding="5sp">

                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:src="@drawable/add_location"/>

                    <TextView
                        android:layout_marginEnd="5sp"
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_en_el_mapa"
                        android:layout_gravity="center"
                        android:textSize="15sp"/>


                </LinearLayout>

            </LinearLayout>

            <!--###Separador###-->
            <View
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:layout_width="match_parent"
                android:layout_height="0.3sp"
                android:background="@color/black"/>

            <!--Fase 5-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Cancelar-->
                <TextView
                    android:id="@+id/recycler_pedidos_btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/textview_redondeado_rojo_chip"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:text="@string/cancelar"
                    android:textColor="@color/rojo_logo"
                    android:textSize="17sp" />

                <!--Aceptar-->
                <TextView
                    android:id="@+id/recycler_pedidos_btn_aceptar"
                    android:paddingEnd="10sp"
                    android:paddingStart="10sp"
                    android:textColor="@color/amarillo_logo"
                    android:background="@drawable/textview_redondeado_amarillo_ship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar"
                    android:textSize="17sp"
                    android:layout_centerHorizontal="true"
                    />

                <!--Finalizado-->
                <TextView
                    android:id="@+id/recycler_pedidos_btn_finalizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/textview_redondeado_verde_chip"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:text="@string/finalizado"
                    android:textColor="@color/verde_brillante"
                    android:textSize="17sp" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>